small change to the index page

--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -10,6 +10,8 @@
     <ul>
         {% for entry in entries %}
             <li>{{ entry }}</li>
+        {% empty %}
+            <p>There are currently not entries to be displayed. Please create one.</p>
         {% endfor %}
     </ul>
 
