--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,7 +12,8 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>
-                    <img src="https://pll.harvard.edu/themes/custom/twel_scholar/logo.svg" alt="Harvard Logo">
+                    {% load static %}
+                    <img src="{% static "/encyclopedia/harvard.png" %}" alt="Harvard Logo">
                     Wiki
                 </h2>
                 <form>
