--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -34,6 +34,13 @@ textarea {
 }
 
 .sidebar h2 {
-    text-align: center;
+    display: inline-block; 
+    font-size: 24px;
+    font-weight: bold; 
+    vertical-align: middle; 
 }
 
+.sidebar img {
+    height: 60px;
+    margin-right: 10px;
+}
