--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -13,7 +13,9 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>
-                    <img src="{% static "/encyclopedia/harvard.png" %}" alt="Harvard Logo">
+                    <a href="{% url 'index' %}">
+                        <img src="{% static "/encyclopedia/harvard.png" %}" href="{% url 'index' %}" alt="Harvard Logo">
+                    </a>
                     Wiki
                 </h2>
                 <form>
@@ -26,7 +28,7 @@
                     <a href="{% url 'new' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random' %}">Random page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
