--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'new' %}">Create New Page</a>
                 </div>
                 <div>
-                    <a href="{% url 'random' %}">Random page</a>
+                    Random page
                 </div>
                 {% block nav %}
                 {% endblock %}
