--- a/encyclopedia/templates/encyclopedia/404.html
+++ b/encyclopedia/templates/encyclopedia/404.html
@@ -1,7 +1,7 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Encyclopedia
+    Page Not Found - Encyclopedia
 {% endblock %}
 
 {% block body %}
@@ -11,4 +11,4 @@
     <a href="{% url 'new' %}">Create New Page</a>
 
 
-{% endblock %}
+{% endblock %} 
