--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -8,7 +8,7 @@
     <h1>Add a new page</h1>
     <form action="{% url 'new' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <input type="submit">
     </form>
 
